--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 +86 184 7700 9009</p>
 			<p>Wechat/QQ:
 10098870</p>
-			<div class="h-50"></div> <img src="img/wechat.png" width="230" alt="" />
+			<div class="h-50"></div> <img src="tree/img/wechat.png" width="230" alt="" />
 			<div class="h-50"></div>
 		</div>
 		<div class="col-md-6 about-img-div">
