--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>矢量服装印花设计</title>
-<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Bootstrap -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="ionicons/css/ionicons.min.css" rel="stylesheet">
-<link href="css/animate.min.css" rel="stylesheet">
-<link href="css/aos.css" rel="stylesheet">
+<link href="bootstrap.min.css" rel="stylesheet">
+<link href="ionicons.min.css" rel="stylesheet">
+<link href="animate.min.css" rel="stylesheet">
+<link href="aos.css" rel="stylesheet">
 <!-- main style -->
-<link href="css/style.css" rel="stylesheet">
+<link href="style.css" rel="stylesheet">
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -72,12 +72,12 @@
 +86 184 7700 9009</p>
 			<p>Wechat/QQ:
 10098870</p>
-			<div class="h-50"></div> <img src="tree/img/wechat.png" width="230" alt="" />
+			<div class="h-50"></div> <img src="wechat.png" width="230" alt="" />
 			<div class="h-50"></div>
 		</div>
 		<div class="col-md-6 about-img-div">
 			<div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
-			<img src="img/about-img.jpg" width="400" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
+			<img src="about-img.jpg" width="400" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
 		</div>
 	</div>
 </div>
@@ -109,7 +109,7 @@
 					<div class="no-padding portfolio_container clearfix" data-aos="fade-up">
 						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="01.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -120,7 +120,7 @@
 						<!-- end single work -->
 												<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/02.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="02.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -130,7 +130,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="03.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -140,7 +140,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/04.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="04.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -150,7 +150,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/05.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="05.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -160,7 +160,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/06.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="06.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -170,7 +170,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/07.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="07.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -180,7 +180,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/08.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="08.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -190,7 +190,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/09.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="09.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -200,7 +200,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/10.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="10.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -210,7 +210,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/11.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="11.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -221,7 +221,7 @@
 						<!-- end single work -->
                         						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/12.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="12.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -232,7 +232,7 @@
 						<!-- end single work -->
                         						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/13.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="13.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -243,7 +243,7 @@
 						<!-- end single work -->
                         						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/14.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="14.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -254,7 +254,7 @@
 						<!-- end single work -->
                         						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/15.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="15.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -314,7 +314,7 @@
 					<p>抱歉，你访问的页面出错了！</p>
 					<p>点击右上角按钮返回</p>
 					<br />
-					<br /> <img src="img/wechat.png" alt="" class="img-responsive" />
+					<br /> <img src="wechat.png" alt="" class="img-responsive" />
 					<br />
 					<br />
 					<p>如不能通过该页面下载，可扫描二维码添加微信，留言获取。</p>
@@ -329,16 +329,16 @@
 </div>
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="jquery.js"></script>
 <!--  plugins  -->
-<script src="js/bootstrap.min.js"></script>
-<script src="js/plugins.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/jquery.form.js"></script>
-<script src="js/jquery.validate.min.js"></script>
+<script src="bootstrap.min.js"></script>
+<script src="plugins.js"></script>
+<script src="aos.js"></script>
+<script src="jquery.form.js"></script>
+<script src="jquery.validate.min.js"></script>
 
 <!--  main script  -->
-<script src="js/custom.js"></script>
+<script src="custom.js"></script>
 </body>
 
 </html>
