--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Hufu Design</title>
+<title>Afu Vector Design</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Bootstrap -->
 <link href="bootstrap.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
 <!-- ./Preloader -->
 
 <!-- header -->
-<header class="navbar-fixed-top">
+<header class="navbar-static-top">
 	<nav>
 		<ul>
 			<li><a href="#about"></a></li>
@@ -53,7 +53,7 @@
 	<div class="container">
 		<div class="disply-table">
 			<div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-				<h4>hufu</h4>
+				<h4>Afu</h4>
 				<h1>矢量<br />
 	            服装印花设计</h1> </div>
 		</div>
