--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<div class="container">
 		<div class="col-md-6" data-aos="fade-up">
 			<h4>01</h4>
-			<h1 class="size-50">About <br />Hufu</h1>
+			<h1 class="size-50">About <br />Afu</h1>
 			<div class="h-50"></div>
 			<p>Mobile:
 +86 184 7700 9009</p>
