--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Afu Vector Design</title>
+<title>Afù Vector Design</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Bootstrap -->
 <link href="bootstrap.min.css" rel="stylesheet">
@@ -53,7 +53,7 @@
 	<div class="container">
 		<div class="disply-table">
 			<div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-				<h4>Afu</h4>
+				<h4>Afù</h4>
 				<h1>矢量<br />
 	            服装印花设计</h1> </div>
 		</div>
@@ -66,7 +66,7 @@
 	<div class="container">
 		<div class="col-md-6" data-aos="fade-up">
 			<h4>01</h4>
-			<h1 class="size-50">About <br />Afu</h1>
+			<h1 class="size-50">About <br />Afù</h1>
 			<div class="h-50"></div>
 			<p>Mobile:
 +86 184 7700 9009</p>
