--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Afù Vector Design</title>
+<title>Afu Vector Design</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Bootstrap -->
 <link href="bootstrap.min.css" rel="stylesheet">
@@ -36,16 +36,7 @@
 <!-- ./Preloader -->
 
 <!-- header -->
-<header class="navbar-static-top">
-	<nav>
-		<ul>
-			<li><a href="#about"></a></li>
-			<li><a href="#experience"></a></li>
-			<li><a href="#projects"></a></li>
-			<li><a href="#contact"></a></li>
-		</ul>
-	</nav>
-</header>
+	
 <!-- ./header -->
 
 <!-- home -->
@@ -311,8 +302,8 @@
 					<h2>：(<br />
 					 </h2>
 					<div class="h-50"></div>
-					<p>抱歉，你访问的页面出错了！</p>
-					<p>点击右上角按钮返回</p>
+					<p>抱歉，您访问的页面出错了！</p>
+					<p>请点击右上角按钮返回。</p>
 					<br />
 					<br /> <img src="wechat.png" alt="" class="img-responsive" />
 					<br />
