--- a/index.html
+++ b/index.html
@@ -100,7 +100,40 @@
 					<div class="no-padding portfolio_container clearfix" data-aos="fade-up">
 						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="01.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="18.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->
+						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="17.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->
+						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="16.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->
+						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="15.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -111,7 +144,7 @@
 						<!-- end single work -->
 												<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="02.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="14.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -121,7 +154,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="03.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="13.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -131,7 +164,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="04.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="12.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -141,47 +174,7 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="05.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="06.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="07.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="08.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="09.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="11.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -201,7 +194,47 @@
 						</div>
 						<!-- end single work -->						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="11.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="09.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="08.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="07.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="06.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="05.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -212,7 +245,7 @@
 						<!-- end single work -->
                         						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="12.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="04.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -223,7 +256,7 @@
 						<!-- end single work -->
                         						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="13.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="03.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -234,7 +267,7 @@
 						<!-- end single work -->
                         						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="14.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="02.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
@@ -245,7 +278,7 @@
 						<!-- end single work -->
                         						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="15.jpg" alt="image" class="img-responsive" />
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="01.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
 										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
