--- a/index.html
+++ b/index.html
@@ -100,6 +100,72 @@
 					<div class="no-padding portfolio_container clearfix" data-aos="fade-up">
 						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="24.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->
+						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="23.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->
+						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="22.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->
+						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="21.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->
+						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="20.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->
+						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
+							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="19.jpg" alt="image" class="img-responsive" />
+								<div class="portfolio_item_hover">
+									<div class="portfolio-border clearfix">
+										<div class="item_info"> <span>Mockups in seconds</span> <em></em> </div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end single work -->
+						<!-- single work -->
+						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="18.jpg" alt="image" class="img-responsive" />
 								<div class="portfolio_item_hover">
 									<div class="portfolio-border clearfix">
