--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
 					<h2>：(<br />
 					 </h2>
 					<div class="h-50"></div>
-					<p>抱歉，您访问的页面出错了！</p>
+					<p>抱歉，您访问的页面功能正在开发中！</p>
 					<p>请点击右上角按钮返回。</p>
 					<br />
 					<br /> <img src="wechat.png" alt="" class="img-responsive" />
 					<br />
 					<br />
-					<p>如不能通过该页面下载，可扫描二维码添加微信，留言获取。</p>
+					<p>如想要下载该文件，可扫描上方二维码添加微信，留言获取。</p>
 					<p></p>
 					<br />
 					<br /> </div>
