--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 					<br /> <img src="wechat.png" alt="" class="img-responsive" />
 					<br />
 					<br />
-					<p>如想要下载该文件，可扫描上方二维码添加微信，留言获取。</p>
+					<p>要下载该文件，可扫描上方二维码添加微信，留言获取。</p>
 					<p></p>
 					<br />
 					<br /> </div>
