--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Afu Vector Design</title>
+<title>Afu 木乐数码印花设计</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Bootstrap -->
 <link href="bootstrap.min.css" rel="stylesheet">
@@ -45,8 +45,8 @@
 		<div class="disply-table">
 			<div class="table-cell" data-aos="fade-up" data-aos-delay="0">
 				<h4>Afù</h4>
-				<h1>矢量<br />
-	            服装印花设计</h1> </div>
+				<h1>木乐<br />
+	            数码印花设计</h1> </div>
 		</div>
 	</div>
 </div>
