--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 		</div>
 	</div>
 		  <div class="col-md-12">
-<p class="text-center">Copyright &copy; 2021  hqf.xyz</p></div>
+<p class="text-center"> &copy; 2021  hqf.xyz</p></div>
 	</div>
   
 </div>
