--- a/index.html
+++ b/index.html
@@ -329,12 +329,10 @@
 							</a>
 						</div>
 						<!-- end single work -->
-<div class="categories-grid wow fadeInLeft">
+                                        <div class="categories-grid wow fadeInLeft">
 						<nav class="categories">
 							<ul class="portfolio_filter">
-								<li><a href="" class="active" data-filter="*">1</a></li>
-								
-								
+								<li><a class="active" data-filter="*">1</a></li>
 							</ul>
 						</nav>
 					</div>
