--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<div class="container">
 		<div class="col-md-12">
 			<h4>02</h4>
-			<h1 class="size-50">My <br /> Projects</h1> 
+			<h1 class="size-50">Some<br /> Project</h1> 
 		</div>
 		<!-- main container -->
 		<div class="main-container portfolio-inner clearfix">
@@ -142,17 +142,7 @@
 							</a>
 						</div>
 						<!-- end single work -->
-						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="17.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Juventus Concept Edition 2021</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->
+					
 						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="16.jpg" alt="image" class="img-responsive" />
@@ -229,40 +219,7 @@
 								</div>
 							</a>
 						</div>
-						<!-- end single work -->						
-						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="09.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>20/21 Ac Milan Away Shirt</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->						
-						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="08.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>América 2021 Third</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->						
-						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="07.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>18/19 Senegal Jersey</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->						
+						<!-- end single work -->												
 						<!-- single work -->
 						<div class="col-md-4 col-sm-6  fashion logo">
 							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="06.jpg" alt="image" class="img-responsive" />
@@ -307,28 +264,7 @@
 							</a>
 						</div>
 						<!-- end single work -->
-                        						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="02.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>Galatasaray 18/19 Third Kit</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->
-                        						<!-- single work -->
-						<div class="col-md-4 col-sm-6  fashion logo">
-							<a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="01.jpg" alt="image" class="img-responsive" />
-								<div class="portfolio_item_hover">
-									<div class="portfolio-border clearfix">
-										<div class="item_info"> <span>PSG Jordan Jersey Cheap</span> <em></em> </div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- end single work -->
+                        						
                                         <div class="categories-grid wow fadeInLeft">
 						<nav class="categories">
 							<ul class="portfolio_filter">
