--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 		</div>
 	</div>
 		  <div class="col-md-12">
-<p class="text-center"> &copy; 2021  hqf.xyz</p></div>
+<p class="text-center"> &copy; 2022  hqf.xyz</p></div>
 	</div>
   
 </div>
@@ -317,7 +317,7 @@
 					<br /> <img src="wechat.png" alt="" class="img-responsive" />
 					<br />
 					<br />
-					<p>要下载该文件，可扫描上方二维码添加微信，留言获取。</p>
+					<p>扫描上方二维码添加微信好友，交流分享。</p>
 					<p></p>
 					<br />
 					<br /> </div>
